--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ textarea {
     font-size: 30px;
     resize: none;
    color: #7a7a7a;
-   border-color: #7a7a7a;
+   border-color: none;
    border-top: 0;
   }
 
@@ -61,7 +61,7 @@ textarea {
     background-color: none;
     border-radius: 3px 0 3px 0;
     outline: none;
-    border-left: 0;
+    border-left: 10;
     
 }
 
@@ -75,7 +75,7 @@ textarea {
     background-color: none;
     cursor: pointer;
     outline: none;
-    border-right: 0;
+    border-right: 10;
     border-radius: 0 3px 0 3px;
   }
 
@@ -150,7 +150,7 @@ footer{
 
 
     header{
-        border: solid;
+        border: none;
         margin: 0;
         border-bottom: 0;
         border-radius: 4px 4px 0 0;
