--- a/style.css
+++ b/style.css
@@ -32,10 +32,10 @@ header h1 a {
 }
 
 main{
-    border-radius: 1px;
+    border-radius: 10px;
     background-color: #ffffff; <!--- tira a cor  da área dos botões --->
-    border-radius: 5px;
-    border: solid #868585;
+    border-radius: 10px;
+    border: none;
 
 }
 
@@ -51,7 +51,7 @@ textarea {
     font-size: 30px;
     resize: none;
    color: #7a7a7a;
-   border-color: #7a7a7a;
+   border-color: none;
    border-top: 0;
   }
 
@@ -59,14 +59,16 @@ textarea {
     width: 60%;
     height: 400px;
     background-color: none;
-    border-radius: 3px 0 3px 0;
+    border-radius: 0px 0 0px 0;
     outline: none;
-    border-left: 0;
+    border-left: 200;
+    <!--- parte do texto que o usuario escreve --->
     
 }
 
+
 #texto {
-    width: 38.8%;
+    width: 38%;
     height: 400px;
     background-size: 100% ;
     background-color: transparent;
@@ -75,8 +77,10 @@ textarea {
     background-color: none;
     cursor: pointer;
     outline: none;
-    border-right: 0;
+    border-right: 10;
     border-radius: 0 3px 0 3px;
+
+    <!--- parte do texto que é decodificado --->
   }
 
 #texto::selection{
@@ -150,7 +154,7 @@ footer{
 
 
     header{
-        border: solid;
+        border: none;
         margin: 0;
         border-bottom: 0;
         border-radius: 4px 4px 0 0;
@@ -176,6 +180,7 @@ main{
     display: inline;
     border-right: 20px ;
     border-top: 10px;
+   
 
     
 }
@@ -184,19 +189,19 @@ main{
     width: 98.7%;
     border-radius: 0;
     border: 0;
-    border-right: 20px ;
+    border-right: 0px ;
 }
 
 #texto{
 
     border-right: 20px ;
-    width: 98.7%;
+    width: 80%;
     border-radius: 0;
-    border-bottom: 2px ;
-    border-style: solid;
+    border-bottom: 0px ;
+    border-style: none;
     border-color: none;
-    border-right: 1px;
-    border-left: 1px;
+    border-right: 0px;
+    border-left: 0px;
 
     
    
