--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
 
 html {
     
-    background-color: #FFFFFF;
+    background-color: #FEFEFE;
+    
 }
 
 header {
@@ -27,6 +28,7 @@ header h1 {
     padding-left: 10px;                                                                                 
     color: #757575;
     text-decoration: none;
+    text-shadow: 2px 2px #FFE4E1;
     position: relative;
     bottom: 5px;
 }
@@ -35,6 +37,13 @@ header h1 a {
 
     text-decoration: none;
     color: none;
+
+}
+
+h2 {
+
+    text-shadow: 2px 2px 1px #FFE4E2;
+    font-size: 30px;
 
 }
 
@@ -52,6 +61,7 @@ main {
 
     padding-top: 20px;
     padding-right: 10px;
+
 }
 
 
@@ -109,19 +119,20 @@ textarea {
 .botoes ul{
     display: inline-block;
     padding: 0;
-    width: 60%;
+    width: 100%;
     text-align: center;
 }
 
 .botoes li {
     font-family: 'Arvo', serif;
+    font-size: 15px;
     display: inline-block;
-    border: 1px solid #e9e9e9;
+    border: 2px solid #e9e9e9;
     font-weight: bold;
-    padding: 12px;
+    padding: 10px;
     border-radius: 18px;
-    width: 120px;
-    margin-left: 10px;
+    width: 100px;
+    margin-left: 5px;
     transition: 1s all;
 }
 
@@ -141,8 +152,6 @@ textarea {
     font-weight: bolder;
     transition: 0.2s;
 }
-
-
 
 .botoes li:selection{
     background: none;
@@ -166,6 +175,8 @@ footer {
     margin-left: 5px;
     position: relative;
     text-align: center;
+    font-family: arial;
+    font-size: 15px;
     background: linear-gradient(#FEFEFE, #FFE4E1);
     padding: 15px;
     border-radius: 20px;
